# terminal_ui

./: .gitignore  Cargo.toml  LICENSE  README.md  commitlint.toml
.github/workflows/: codeql.yml  codesuggestions.yml  monthly-pr.yml
.husky/: commit-msg  pre-commit
.husky/hooks/: commit-msg  pre-commit
src/: app.rs  lib.rs  main.rs
src/components/: main_page.rs  notification.rs  notification_page.rs  player_screen.rs  search_popup.rs  song_list.rs
src/constant/: song_list.rs
src/event/: app_events.rs
src/helpers/: audio_decode.rs  core_audio_module.rs
src/pages/: main_page.rs  search_popup.rs  song_list.rs
src/shared/: audio_state.rs  player_state.rs
src/state/: player_state.rs
src/types/: song_model.rs
