[package]
name = "terminal_app"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.29.0"
dotenvy = "0.15.7"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls", "stream"] }
serde = "1.0.213"
serde_json = "1.0.132"
ratatui = "0.29.0"
tokio = { version = "1.48.0", features = ["full"] }
