[package]
name = "terminal_app"
version = "0.0.1"
edition = "2021"

[profile.dev]
incremental = false

[dependencies]
base64 = { version = "0.22.1" }
block-modes = { version = "0.8.1" }
crossterm = "0.29.0"
dotenvy = "0.15.7"
des = { version = "0.7.0" }
ratatui = "0.29.0"
reqwest = { version = "0.12.26", default-features = false, features = [
    "json",
    "rustls-tls",
    "stream",
    "blocking",
] }
serde = "1.0.213"
serde_json = "1.0.132"
tokio = { version = "1.48.0", features = ["full"] }
