[package]
name = "terminal_app"
version = "0.0.1"
edition = "2021"

[profile.dev]
incremental = false

[profile.release]
incremental = false
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dev-dependencies]
husky-rs = { version = "0.1.5" }

[dependencies]
base64 = { version = "0.22.1" }
block-modes = { version = "0.8.1" }
crossterm = "0.29.0"
dotenvy = "0.15.7"
des = { version = "0.7.0" }
html-escape = { version = "0.2.13" }
lazy_static = { version = "1.5.0" }
ratatui = "0.30.0"
reqwest = { version = "0.13.1", default-features = false, features = [
    "json",
    "native-tls",
    "http2",
    "stream",
    "blocking",
] }
rodio = { version = "0.21.1" }
serde = "1.0.213"
serde_json = "1.0.148"
symphonia = { version = "0.5.5", features = ["aac", "isomp4"] }
tokio = { version = "1.48.0", features = ["full"] }
